examples/errors/func_no_statements.cy
fun hello() {
}

fun foo(a: int) -> int {
}
